Compucom CCQA Org 100919/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>ApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Not submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Planning Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Planning_Version__c.Is_this_a_Budget_Planning_Version__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BussinessUnit_del__c</fullName>
        <label>BusinessUnit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUPERMARKETS</fullName>
                </value>
                <value>
                    <fullName>MASS/SUPERCENTER</fullName>
                </value>
                <value>
                    <fullName>DRUG STORES</fullName>
                </value>
                <value>
                    <fullName>SUPERCENTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Duration__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Deal Duration(months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_TCV__c</fullName>
        <label>Deal TCV $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Conglomerates</fullName>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCST_BSLA__c</fullName>
        <label>FCST BSLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCST_Q__c</fullName>
        <displayFormat>Q-{0000}</displayFormat>
        <label>FCST Q#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FCST_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCST_Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCST_Test_Amount__c</fullName>
        <description>Creating for Mapping Test</description>
        <label>FCST Test Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCST_Test_Product_Amount__c</fullName>
        <label>FCST Test Product Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fcst_End_Date__c</fullName>
        <label>Fcst End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fcst_Geo_Codes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fcst Geo Codes</label>
        <referenceTo>Fcst_Geo_Codes__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fcst_Start_Date__c</fullName>
        <label>Fcst Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fcst_Text_QNum__c</fullName>
        <label>Fcst_Text_QNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Type__c</fullName>
        <label>Fcst Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Annuity</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Renewal Annuity</fullName>
                </value>
                <value>
                    <fullName>Annuity Change</fullName>
                </value>
                <value>
                    <fullName>Project Change</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Commodity</fullName>
                </value>
                <value>
                    <fullName>Product Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <label>Forecast Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below the Line</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Above the Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gap_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gap Planning Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Planning_Version__c.Is_this_a_Gap_Planning_Version__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>Opportunities (Gap Planning Version)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geo_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo Test</label>
        <referenceTo>Geo_Test__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <label>Legacy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_formula_Check__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number formula Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>New Licenses</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_L_Center__c</fullName>
        <label>P&amp;L Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defense International</fullName>
                </value>
                <value>
                    <fullName>Navy &amp; USMC</fullName>
                </value>
                <value>
                    <fullName>DAGARS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partial_Shipments__c</fullName>
        <label>Partial Shipments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_End_date__c</fullName>
        <formula>DATE(
year( Project_Start_Date__c)
+ if(
mod((month(Project_Start_Date__c) + Deal_Duration__c - 1),12) = 0,
floor((month(Project_Start_Date__c) + Deal_Duration__c - 1)/12) - 1,
floor((month(Project_Start_Date__c) + Deal_Duration__c - 1)/12)

)
+ if(
and(
month(Project_Start_Date__c ) = 12,
Deal_Duration__c - 1&gt;= 12
),-1,0
)
,
if( mod( month(Project_Start_Date__c) + Deal_Duration__c - 1, 12 ) = 0, 12 , mod( month(Project_Start_Date__c) + Deal_Duration__c - 1, 12 ))
,
min(
day(Project_Start_Date__c),
case(
max( mod( month(Project_Start_Date__c) + Deal_Duration__c - 1, 12 ) , 1),
9,30,
4,30,
6,30,
11,30,
2,28,
31
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason for Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Opportunity</fullName>
                </value>
                <value>
                    <fullName>Government Timing</fullName>
                </value>
                <value>
                    <fullName>Government Dependencies</fullName>
                </value>
                <value>
                    <fullName>Delay due to customer funding issues</fullName>
                </value>
                <value>
                    <fullName>IDIQ/BOA contract with undefined PO</fullName>
                </value>
                <value>
                    <fullName>Negotiation Adjustment</fullName>
                </value>
                <value>
                    <fullName>Accounting Adjustment</fullName>
                </value>
                <value>
                    <fullName>In Negotiation</fullName>
                </value>
                <value>
                    <fullName>Opportunity Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer scope changes</fullName>
                </value>
                <value>
                    <fullName>Performance Deobligation</fullName>
                </value>
                <value>
                    <fullName>Unplanned order Received</fullName>
                </value>
                <value>
                    <fullName>Order Received Earlier than Forecasted</fullName>
                </value>
                <value>
                    <fullName>Order Received</fullName>
                </value>
                <value>
                    <fullName>Administrative Changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Gap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Heavy</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted for Planning Version</label>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>Opportunities (Submitted for Planning Version)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>